--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
   <link rel="stylesheet" href="./style/css/all.css">
   <title>Vue 電商後台 - 登入</title>
 </head>
@@ -16,12 +17,18 @@
         <div class="col-10">
           <form>
             <div class="form-floating mb-3">
-              <input v-model.lazy.trim="userEmail" type="email" class="form-control" id="userEmail1" aria-describedby="emailHelp" placeholder="Email address">
+              <input v-model.lazy.trim="userEmail" type="email" :class="{'border-danger': invalid.email, 'form-control': true }" id="userEmail1" aria-describedby="emailHelp" placeholder="Email address">
               <label for="userEmail1" class="form-label">帳號 Email</label>
+              <div v-show="invalid.email" class="position-absolute top-50 start-100 translate-middle-y p-3">
+                <span class="material-icons-outlined text-danger align-middle">error_outline</span>
+              </div>
             </div>
             <div class="form-floating mb-4">
-              <input v-model.lazy.trim="password" type="password" class="form-control" id="userPassword" placeholder="Password">
+              <input v-model.lazy.trim="password" type="password" :class="{'border-danger': invalid.password, 'form-control': true }" id="userPassword" placeholder="Password">
               <label for="userPassword" class="form-label">密碼 Password</label>
+              <div v-show="invalid.password" class="position-absolute top-50 start-100 translate-middle-y p-3">
+                <span class="material-icons-outlined text-danger align-middle">error_outline</span>
+              </div>
             </div>
             <button @click.prevent="login" type="submit" class="btn btn-primary w-100 fs-5">登入</button>
           </form>
