--- a/week2/login.html
+++ b/week2/login.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
-  <link rel="stylesheet" href="./style/css/all.css">
+  <link rel="stylesheet" href="../style/css/all.css">
   <title>Vue 電商後台 - 登入</title>
 </head>
 <body class="d-flex vh-100 justify-content-center align-items-center">
@@ -17,8 +17,8 @@
         <div class="col-10">
           <form>
             <div class="form-floating mb-3">
-              <input v-model.lazy.trim="userEmail" type="email" :class="{'border-danger': invalid.email, 'form-control': true }" id="userEmail1" aria-describedby="emailHelp" placeholder="Email address">
-              <label for="userEmail1" class="form-label">帳號 Email</label>
+              <input v-model.lazy.trim="userEmail" type="email" :class="{'border-danger': invalid.email, 'form-control': true }" id="userEmail" aria-describedby="emailHelp" placeholder="Email address">
+              <label for="userEmail" class="form-label">帳號 Email</label>
               <div v-show="invalid.email" class="position-absolute top-50 start-100 translate-middle-y p-3">
                 <span class="material-icons-outlined text-danger align-middle">error_outline</span>
               </div>
@@ -41,6 +41,6 @@
 
   <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-  <script type="module" src="./js/login.js"></script>
+  <script type="module" src="../js/login.js"></script>
 </body>
 </html>
