--- a/week2/products.html
+++ b/week2/products.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/spinkit/2.0.1/spinkit.min.css">
-  <link rel="stylesheet" href="./style/css/all.css">
+  <link rel="stylesheet" href="../style/css/all.css">
   <title>Vue 電商後台 - 產品管理</title>
 </head>
 <body>
@@ -62,7 +62,7 @@
                 </div>
               </div>
               <ul class="row list-unstyled justify-content-start gutter-sm">
-                <li class="col-4 col-md-3" v-for="url in product.imagesUrl">
+                <li class="col-4 col-md-3" v-for="url in product.imagesUrl" :key="url">
                   <img class="object-fit-cover" :src="url" :alt="product.title">
                 </li>
               </ul>
@@ -74,6 +74,6 @@
   </div>
   <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-  <script type="module" src="./js/products.js"></script>
+  <script type="module" src="../js/products.js"></script>
 </body>
 </html>
