--- a/week2/login.html
+++ b/week2/login.html
@@ -34,7 +34,7 @@
           </form>
         </div>
       </div>
-      <p class="text-secondary mt-5">&copy; 2023 LHchien.</p>
+      <small class="d-block text-muted mt-5">&copy; 2023 LHchien.</small>
     </div>
   </div>
 
