--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1 class="h3 text-center mb-2">主線任務首頁</h1>
       <h2 class="h5 text-center mb-4">2022 Vue 冬季直播班</h2>
       <ul class="list-group mb-4">
-        <li class="list-group-item p-0"><a href="./week1/products.html" class="list-group-item-action d-block py-2 px-3 text-decoration-none">week 1 - 關注點分離（產品列表）</a></li>
+        <li class="list-group-item p-0"><a href="./week1/products.html" class="list-group-item-action d-block py-2 px-3 text-decoration-none">week 1 - 關注點分離</a></li>
         <li class="list-group-item p-0"><a href="./week2/login.html" class="list-group-item-action d-block py-2 px-3 text-decoration-none">week 2 - RESTful API 串接</a></li>
         <li class="list-group-item p-0"><a href="./week3/login.html" class="list-group-item-action d-block py-2 px-3 text-decoration-none">week 3 - 熟練 Vue.js</a></li>
       </ul>
