--- a/week3/products.html
+++ b/week3/products.html
@@ -122,22 +122,22 @@
                       <div class="col">
                         <label for="origin_price" class="form-label">原價<span class="text-danger ms-1">*</span></label>
                         <div class="position-relative mb-2">
-                          <input type="text" id="origin_price" v-model.number="tempProduct.origin_price" @blur="validator" class="form-control" :class="{ 'border-danger': invalid.origin_price }" placeholder="請輸入原價">
+                          <input type="number" id="origin_price" v-model.number="tempProduct.origin_price" @blur="validator" class="form-control" :class="{ 'border-danger': invalid.origin_price }" placeholder="請輸入原價">
                           <div v-show="invalid.origin_price" class="position-absolute top-50 end-0 translate-middle-y px-3 pb-1">
                             <span class="material-icons-outlined text-danger align-middle">error_outline</span>
                           </div>
                         </div>
-                        <p v-show="invalid.origin_price === '非數字'" class="mb-0 text-danger">請輸入數字</p>
+                        <p v-show="invalid.origin_price === '非合理數字'" class="mb-0 text-danger">{{ tempProduct.origin_price < 0 ? '數字不得小於 0' : '請輸入數字' }}</p>
                       </div>
                       <div class="col">
                         <label for="price" class="form-label">售價<span class="text-danger ms-1">*</span></label>
                         <div class="position-relative mb-2">
-                          <input type="text" id="price" v-model.number="tempProduct.price" @blur="validator" class="form-control" :class="{ 'border-danger': invalid.price }" placeholder="請輸入售價">
+                          <input type="number" id="price" v-model.number="tempProduct.price" @blur="validator" class="form-control" :class="{ 'border-danger': invalid.price }" placeholder="請輸入售價">
                           <div v-show="invalid.price" class="position-absolute top-50 end-0 translate-middle-y px-3 pb-1">
                             <span class="material-icons-outlined text-danger align-middle">error_outline</span>
                           </div>
                         </div>
-                        <p v-show="invalid.price === '非數字'" class="mb-0 text-danger">請輸入數字</p>
+                        <p v-show="invalid.price === '非合理數字'" class="mb-0 text-danger">{{ tempProduct.price < 0 ? '數字不得小於 0' : '請輸入數字' }}</p>
                       </div>
                     </div>
                     <div class="mb-3">
