--- a/week4/products.html
+++ b/week4/products.html
@@ -50,10 +50,10 @@
         <div class="bounce2"></div>
         <div class="bounce3"></div>
       </div>
-      <p>目前有 {{ products.length }} 項產品</p>
+      <p>此頁共有 {{ products.length }} 項產品</p>
 
       <!-- 分頁導覽 -->
-      <pagi v-bind="pagination" v-if="pagination.total_pages"></pagi>
+      <pagi v-bind="pagination" v-if="pagination.total_pages" @switch-page="getProducts"></pagi>
 
       <!-- 新增 / 編輯 / 刪除產品 modal -->
       <modal-update :is-new="isNew" :temp="{...tempProduct}" @confirm="updateProduct"></modal-update>
