--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li class="list-group-item p-0"><a href="./week2/login.html" class="list-group-item-action d-block py-2 px-3 text-decoration-none">week 2 - RESTful API 串接</a></li>
         <li class="list-group-item p-0"><a href="./week3/login.html" class="list-group-item-action d-block py-2 px-3 text-decoration-none">week 3 - 熟練 Vue.js</a></li>
         <li class="list-group-item p-0"><a href="./week4/login.html" class="list-group-item-action d-block py-2 px-3 text-decoration-none">week 4 - 元件化</a></li>
+        <li class="list-group-item p-0"><a href="./week5/index.html" class="list-group-item-action d-block py-2 px-3 text-decoration-none">week 5 - 進階語法</a></li>
       </ul>
       <small class="d-block text-muted text-center">&copy; 2023 LHchien.</small>
     </div>
